@@ -150,8 +150,8 @@ public class ADLBasicAttribute extends WidgetPart{
     @Override
     public Object[] getChildren(){
         Object[] ret = new Object[4];
-        ret[0] = new ADLResource(ADLResource.FOREGROUND_COLOR, new Integer(_clr));
-        ret[1] = new ADLResource(ADLResource.LINE_WIDTH, new Integer(_width));
+        ret[0] = new ADLResource(ADLResource.FOREGROUND_COLOR, Integer.valueOf(_clr));
+        ret[1] = new ADLResource(ADLResource.LINE_WIDTH, Integer.valueOf(_width));
         ret[2] = new ADLResource(ADLResource.STYLE, _style);
         ret[3] = new ADLResource(ADLResource.FILL, _fill);
 
